update adventure flow

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,20 +1,16 @@
 @import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css);
 
-html,
-body {
+html, body {
 	font-family: 'Noto Sans TC', sans-serif;
 	padding: 0;
 	margin: 0;
 }
-
 @media screen and (min-width:480px) {
 	body {
 		width: 480px;
 		margin: 0 auto;
 	}
-
 }
-
 .dialog {
 	background-color: rgba(255, 255, 255, 0.85);
 	position: absolute;
@@ -28,60 +24,48 @@ body {
 	-webkit-transition: margin-top .5s, height .5s;
 	transition: margin-top .5s, height .5s;
 }
-
 .dialog.show {
 	margin-top: -30px;
 	height: 60px;
 }
-
 .dialog table {
 	height: 100%;
 	width: 100%;
 }
-
 #dialog-text {
 	text-align: center;
 }
-
 #menu {
 	display: none;
 	position: absolute;
 }
-
 #menu.show {
 	display: block;
 	z-index: 10;
 }
-
 .operate {
 	width: 100%;
 }
-
 .collect-btn {
 	background: white;
 }
-
 .log {
 	display: none;
 	width: 100%;
 	height: 120px;
 }
-
 .log-item {
 	position: relative;
 }
-
 #history {
 	width: 100%;
 	height: 100px;
 	margin: 10px 0px 10px 10px;
 	overflow-y: scroll;
 }
-
 .health {
 	line-height: 64px;
 }
-
 .heart {
 	width: 32px;
 	height: 32px;
@@ -91,11 +75,9 @@ body {
 	position: relative;
 	top: 8px;
 }
-
 .heart.half {
 	background-image: url(/image/half-heart.gif);
 }
-
 .item {
 	box-sizing: border-box;
 	display: inline-block;
@@ -107,7 +89,6 @@ body {
 	cursor: pointer;
 	margin: 2px;
 }
-
 .item-pic {
 	width: 100%;
 	height: 100%;
@@ -115,7 +96,6 @@ body {
 	background-position: center;
 	background-size: 40px 40px;
 }
-
 .amount {
 	position: relative;
 	top: -8px;
@@ -124,42 +104,36 @@ body {
 	top: -24px;
 	font-size: 12px;
 }
-
 .scene {
 	width: 100%;
-	height: 200px;
+	height: 230px;
 	position: relative;
 	background-image: url(/image/sky.png);
 	background-size: contain;
 	overflow: hidden;
 }
-
 .sky-filter {
 	width: 100%;
 	height: 100%;
 	-webkit-transition: background 1s;
 	transition: background 1s;
 }
-
 .sky-filter.morning {
 	background: rgba(255, 255, 255, 0);
 }
-
 .sky-filter.night {
 	background: rgba(40, 40, 60, 0.9);
 }
-
 .sky-filter.noon {
 	background: rgba(255, 255, 255, 0.3);
 }
-
 .avatar {
 	position: absolute;
-	bottom: 58px;
+	bottom: 54px;
 	left: 50%;
 	margin-left: -32px;
+	z-index: 2;
 }
-
 .land {
 	background-image: url(/image/land.gif);
 	background-size: 120% 100%;
@@ -170,7 +144,6 @@ body {
 	position: absolute;
 	bottom: -24px;
 }
-
 #makelist {
 	width: 300px;
 	height: 300px;
@@ -183,18 +156,15 @@ body {
 	z-index: 30;
 	display: none;
 }
-
 #makelist.show {
 	display: block;
 }
-
 .makeitem {
 	float: left;
 	width: 20%;
 	height: 40px;
 	line-height: 40px;
 }
-
 .makeitempic {
 	width: 32px;
 	height: 32px;
@@ -205,14 +175,12 @@ body {
 	margin-top: -10px;
 	top: 10px;
 }
-
 .makeformula {
 	float: right;
 	width: 75%;
 	height: 40px;
 	line-height: 40px;
 }
-
 #makelist .resource {
 	width: 32px;
 	height: 32px;
@@ -223,12 +191,24 @@ body {
 	margin-top: -10px;
 	top: 10px;
 }
-
 .info-box {
 	background-color: #333333;
 	color: #ffffff;
+	position: relative;
+	border-radius: 4px;
 }
-
+.info-box:after {
+	content: "";
+	border: 1px solid;
+	position: absolute;
+	box-sizing: border-box;
+	left: 7%;
+	top: 10%;
+	height: 80%;
+	width: 88%;
+	line-height: 22px;
+	border-radius: 2px;
+}
 .char-action {
 	width: 54px;
 	height: 30px;
@@ -236,5 +216,9 @@ body {
 	text-align: center;
 	margin-bottom: 8px;
 	margin-left: 5px;
+	font-size: 14px;
 	cursor: pointer;
+}
+#logTab {
+	display: none;
 }
